src/modules/GmshAPI/src/GmshInterface/gmshc.h


GMSH_API int gmshModelGeoAddPoint(const double x,
                                  const double y,
                                  const double z,
                                  const double meshSize,
                                  const int tag,
                                  int *ierr);
GMSH_API int gmshModelGeoAddLine(const int startTag,
                                 const int endTag,
                                 const int tag,
                                 int *ierr);
GMSH_API int gmshModelGeoAddCircleArc(const int startTag,
                                      const int centerTag,
                                      const int endTag,
                                      const int tag,
                                      const double nx,
                                      const double ny,
                                      const double nz,
                                      int *ierr);
GMSH_API int gmshModelGeoAddEllipseArc(const int startTag,
                                       const int centerTag,
                                       const int majorTag,
                                       const int endTag,
                                       const int tag,
                                       const double nx,
                                       const double ny,
                                       const double nz,
                                       int *ierr);
GMSH_API int gmshModelGeoAddSpline(int *pointTags, size_t pointTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelGeoAddBSpline(int *pointTags, size_t pointTags_n,
                                    const int tag,
                                    int *ierr);
GMSH_API int gmshModelGeoAddBezier(int *pointTags, size_t pointTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelGeoAddPolyline(int *pointTags, size_t pointTags_n,
                                     const int tag,
                                     int *ierr);
GMSH_API int gmshModelGeoAddCompoundSpline(int *curveTags, size_t curveTags_n,
                                           const int numIntervals,
                                           const int tag,
                                           int *ierr);
GMSH_API int gmshModelGeoAddCompoundBSpline(int *curveTags, size_t curveTags_n,
                                            const int numIntervals,
                                            const int tag,
                                            int *ierr);
GMSH_API int gmshModelGeoAddCurveLoop(int *curveTags, size_t curveTags_n,
                                      const int tag,
                                      const int reorient,
                                      int *ierr);
GMSH_API void gmshModelGeoAddCurveLoops(int *curveTags, size_t curveTags_n,
                                        int **tags, size_t *tags_n,
                                        int *ierr);
GMSH_API int gmshModelGeoAddPlaneSurface(int *wireTags, size_t wireTags_n,
                                         const int tag,
                                         int *ierr);
GMSH_API int gmshModelGeoAddSurfaceFilling(int *wireTags, size_t wireTags_n,
                                           const int tag,
                                           const int sphereCenterTag,
                                           int *ierr);
GMSH_API int gmshModelGeoAddSurfaceLoop(int *surfaceTags, size_t surfaceTags_n,
                                        const int tag,
                                        int *ierr);
GMSH_API int gmshModelGeoAddVolume(int *shellTags, size_t shellTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API void gmshModelGeoExtrude(int *dimTags, size_t dimTags_n,
                                  const double dx,
                                  const double dy,
                                  const double dz,
                                  int **outDimTags, size_t *outDimTags_n,
                                  int *numElements, size_t numElements_n,
                                  double *heights, size_t heights_n,
                                  const int recombine,
                                  int *ierr);
GMSH_API void gmshModelGeoRevolve(int *dimTags, size_t dimTags_n,
                                  const double x,
                                  const double y,
                                  const double z,
                                  const double ax,
                                  const double ay,
                                  const double az,
                                  const double angle,
                                  int **outDimTags, size_t *outDimTags_n,
                                  int *numElements, size_t numElements_n,
                                  double *heights, size_t heights_n,
                                  const int recombine,
                                  int *ierr);
GMSH_API void gmshModelGeoTwist(int *dimTags, size_t dimTags_n,
                                const double x,
                                const double y,
                                const double z,
                                const double dx,
                                const double dy,
                                const double dz,
                                const double ax,
                                const double ay,
                                const double az,
                                const double angle,
                                int **outDimTags, size_t *outDimTags_n,
                                int *numElements, size_t numElements_n,
                                double *heights, size_t heights_n,
                                const int recombine,
                                int *ierr);
GMSH_API void gmshModelGeoTranslate(int *dimTags, size_t dimTags_n,
                                    const double dx,
                                    const double dy,
                                    const double dz,
                                    int *ierr);
GMSH_API void gmshModelGeoRotate(int *dimTags, size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double ax,
                                 const double ay,
                                 const double az,
                                 const double angle,
                                 int *ierr);
GMSH_API void gmshModelGeoDilate(int *dimTags, size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double a,
                                 const double b,
                                 const double c,
                                 int *ierr);
GMSH_API void gmshModelGeoMirror(int *dimTags, size_t dimTags_n,
                                 const double a,
                                 const double b,
                                 const double c,
                                 const double d,
                                 int *ierr);
GMSH_API void gmshModelGeoSymmetrize(int *dimTags, size_t dimTags_n,
                                     const double a,
                                     const double b,
                                     const double c,
                                     const double d,
                                     int *ierr);
GMSH_API void gmshModelGeoCopy(int *dimTags, size_t dimTags_n,
                               int **outDimTags, size_t *outDimTags_n,
                               int *ierr);
GMSH_API void gmshModelGeoRemove(int *dimTags, size_t dimTags_n,
                                 const int recursive,
                                 int *ierr);
GMSH_API void gmshModelGeoRemoveAllDuplicates(int *ierr);
GMSH_API void gmshModelGeoSplitCurve(const int tag,
                                     int *pointTags, size_t pointTags_n,
                                     int **curveTags, size_t *curveTags_n,
                                     int *ierr);
GMSH_API int gmshModelGeoGetMaxTag(const int dim,
                                   int *ierr);
GMSH_API void gmshModelGeoSetMaxTag(const int dim,
                                    const int maxTag,
                                    int *ierr);
GMSH_API int gmshModelGeoAddPhysicalGroup(const int dim,
                                          int *tags, size_t tags_n,
                                          const int tag,
                                          int *ierr);
GMSH_API void gmshModelGeoRemovePhysicalGroups(int *dimTags, size_t dimTags_n,
                                               int *ierr);
GMSH_API void gmshModelGeoSynchronize(int *ierr);